--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,10 @@
-html,body { 
+html,body 
+{ 
     background-color: black;
     width:100%;
     height: 100%;
+}
 
-    
- }
  body{
   min-height: 100%;
 }
@@ -284,6 +284,7 @@ article:nth-child(n + 4) header {
 .left
 {
   float: left;
+  width: 100%;
   
 }
 .right
@@ -531,4 +532,9 @@ ul li ul{
   /*1250px put left and change width to 100*/
   float: right;
   
+}
+
+.ProjectPageList
+{
+  width:100%;
 }
